--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <head>
   <title>{{ site.title }}</title>
 	<meta charset="utf-8" />
+	<link rel="shortcut icon" type="image/png" href="/favicon.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
 	<link rel="stylesheet" href="/css/main.css" />
